# kursovaya_6

./: README.md  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_list.html
config/: settings.py  urls.py
main/: admin.py  form.py  models.py  send_mailing.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_mailing_send_time.py  0002_initial.py  0002_remove_client_mailings_mailing_client.py  0003_alter_mailing_send_time_alter_mailing_status.py  0003_rename_mailinglogs_mailinglog_alter_client_options_and_more.py  0004_rename_mailinglog_mailinglogs_alter_client_options_and_more.py
main/templates/main/: base.html  client.html  client_confirm_delete.html  client_form.html  index.html  mailing.html  mailing_confirm_delete.html  mailing_form.html  mailinglogs.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  user_form.html
